server/tests/snapshots/book__borrow.snap
---
source: server/tests/book.rs
expression: read_snapshot(&log_dir)
---
BookCreatePayload {
    title: "Cinderella",
    access_token: "admin@admin.com",
}
UserCreatePayload {
    email: "simple@user.com",
    access_mask: 1,
    requester_access_token: None,
}
BookBorrowByTitlePayload {
    title: "Cinderella",
    borrow_length: 86400,
    borrow_id: "simple@user.com",
}
BookBorrowByTitlePayload {
    title: "Cinderella",
    borrow_length: 86400,
    borrow_id: "simple@user.com",
}
