server/tests/snapshots/book__end_loan.snap
---
source: server/tests/book.rs
expression: read_snapshot(&log_dir)
---
UserCreationPayload {
    email: "first@user.com",
    access_mask: 1,
    requester_access_token: None,
}
UserCreationPayload {
    email: "second@user.com",
    access_mask: 1,
    requester_access_token: None,
}
BookLeaseByTitlePayload {
    title: "Rapunzel",
    lease_length: 86400,
    lease_id: "first@user.com",
}
BookEndLoanByTitlePayload {
    title: "Rapunzel",
    lease_id: "first@user.com",
    access_token: "second@user.com",
}
BookEndLoanByTitlePayload {
    title: "Rapunzel",
    lease_id: "first@user.com",
    access_token: "first@user.com",
}
BookLeaseByTitlePayload {
    title: "Rapunzel",
    lease_length: 86400,
    lease_id: "second@user.com",
}
UserCreationPayload {
    email: "librarian@user.com",
    access_mask: 17,
    requester_access_token: Some(
        "admin_access_token",
    ),
}
BookEndLoanByTitlePayload {
    title: "Rapunzel",
    lease_id: "second@user.com",
    access_token: "librarian@user.com",
}

