server/tests/snapshots/book__get.snap
---
source: tests/book.rs
expression: read_snapshot(&log_dir)
---
BookGetByTitlePayload {
    title: "Rapunzel",
}

