server/tests/snapshots/book__lease.snap
---
source: server/tests/book.rs
expression: read_snapshot(&log_dir)
---
UserCreationPayload {
    email: "simple@user.com",
    access_mask: 1,
    requester_access_token: None,
}
BookLeaseByTitlePayload {
    title: "Rapunzel",
    lease_id_req: "simple@user.com",
    lease_length: 86400,
}
BookLeaseByTitlePayload {
    title: "Rapunzel",
    lease_id_req: "simple@user.com",
    lease_length: 86400,
}

